changed header titles to CalSans font, changed background color, added particles that follow the mouse movement

--- a/app/globals.css
+++ b/app/globals.css
@@ -138,6 +138,16 @@ body {
 }
 /* manrope font */
 
+/* calsans font */
+@font-face {
+  font-family: 'CalSans';
+  src: url('/fonts/CalSans/CalSans-SemiBold.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap
+}
+/* calsans font */
+
 /* mabry font 
 @font-face {
   font-family: 'MabryPro';
@@ -342,7 +352,8 @@ mabry font */
 /* Background */
 body {
   margin: 0;
-  background: linear-gradient(to top, #0e1126, #1e2551);
+  /*background: linear-gradient(to top, #0e1126, #1e2551);*/
+  background-color: #0f0f11;
   background-attachment: fixed;
 }
 
